@@ -13438,4 +13438,21 @@ subst.c
 	- make sure that parameter_brace_substring leaves this_command_name
 	  set to either NULL or its previous value after setting it so that
 	  arithmetic evaluation errors while expanding substring values
-	  contain meaningful informationn
+	  contain meaningful information
+
+				    6/9
+				    ---
+execute_cmd.c
+	- make sure that SUBSHELL_ASYNC and SUBSHELL_PIPE are set as flag bits
+	  in subshell_environment, rather than setting only a single value
+	- change execute_subshell_builtin_or_function to give the `return'
+	  builtin a place to longjmp to when executed in a subshell or pipeline
+	  (mostly as the last command in a pipeline).  Bug reported by
+	  Oleg Verych <olecom@gmail.com>
+	- in execute_simple_command, make sure to call execute_disk_command
+	  with the_printed_command_except_trap to keep DEBUG trap command
+	  strings from overwriting the command strings associated with jobs
+	  and printed in job control messages.  Bug reported by Daniel Kahn
+	  Gillmor <dkg-debian.org@fifthhorseman.net>
+
+[bash-3.2-alpha frozen]
