@@ -13414,6 +13414,43 @@ lib/readline/undo.c
 	- new function, alloc_undo_entry (enum undo_code what, int start, int end, char *text)
 	  takes care of allocating and populating a struct for an individual
 	  undo list entry
+	- new function: _rl_copy_undo_entry(UNDO_LIST *entry)
+	- new function: _rl_copy_undo_list(UNDO_LIST *head)
 
+lib/readline/rlprivate.h
+	- new extern declarations for _rl_copy_undo_{entry,list}
 
-	  
+execute_cmd.c
+	- change execute_cond_node so that quoting the rhs of the =~
+	  operator forces string matching, like the == and != operators
+
+				   5/23
+				   ----
+redir.c
+	- add_undo_redirect now takes as an additional argument the type of
+	  redirection we're trying to undo
+	- don't add a "preservation" redirection for fds > SHELL_FD_BASE if
+	  the redirection is closing the fd
+
+				   5/24
+				   ----
+subst.c
+	- make sure that parameter_brace_substring leaves this_command_name
+	  set to either NULL or its previous value after setting it so that
+	  arithmetic evaluation errors while expanding substring values
+	  contain meaningful information
+
+				    6/9
+				    ---
+execute_cmd.c
+	- make sure that SUBSHELL_ASYNC and SUBSHELL_PIPE are set as flag bits
+	  in subshell_environment, rather than setting only a single value
+	- change execute_subshell_builtin_or_function to give the `return'
+	  builtin a place to longjmp to when executed in a subshell or pipeline
+	  (mostly as the last command in a pipeline).  Bug reported by
+	  Oleg Verych <olecom@gmail.com>
+	- in execute_simple_command, make sure to call execute_disk_command
+	  with the_printed_command_except_trap to keep DEBUG trap command
+	  strings from overwriting the command strings associated with jobs
+	  and printed in job control messages.  Bug reported by Daniel Kahn
+	  Gillmor <dkg-debian.org@fifthhorseman.net>
