@@ -25,7 +25,7 @@ dnl Process this file with autoconf to produce a configure script.
 AC_REVISION([for Bash 3.2, version 3.188])dnl
 
 define(bashvers, 3.2)
-define(relstatus, alpha)
+define(relstatus, devel)
 
 AC_INIT([bash], bashvers-relstatus, [bug-bash@gnu.org])
 
