@@ -148,4 +148,3 @@ expect 2 40
 2 40
 expect 5 20
 5 20
-5
