@@ -165,12 +165,4 @@ myfunction() {
 myfunction
 myfunction | cat
 
-segv()
-{
-	echo foo | return 5
-}
-
-segv
-echo $?
-
 exit 0
