@@ -114,6 +114,12 @@ ii. Fixed a bug that could cause file descriptors > 10 to not be closed even
 jj. Fixed a bug that caused single quotes to be stripped from ANSI-C quoting
     inside double-quoted command substitutions.
 
+kk. Fixed a bug that could cause core dumps when `return' was executed as the
+    last element of a pipeline inside a shell function.
+
+ll. Fixed a bug that caused DEBUG trap strings to overwrite commands stored in
+    the jobs list.
+
 2.  Changes to Readline
 
 a.  Fixed a problem that caused segmentation faults when using readline in
